--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -943,12 +943,12 @@
             document.getElementById('anonimos2').style.display = 'none';
         }
 
-        jQuery(document).ready(function($) { 
-            $(".scroll, .scroll1,.scroll2,.scroll3,.scroll4").click(function(event){        
-                event.preventDefault();
-                $('html,body').animate({scrollTop:$(this.hash).offset().top}, 600);
-        });
-        });
+        // jQuery(document).ready(function($) { 
+        //     $(".scroll, .scroll1,.scroll2,.scroll3,.scroll4").click(function(event){        
+        //         event.preventDefault();
+        //         $('html,body').animate({scrollTop:$(this.hash).offset().top}, 600);
+        // });
+        // });
     </script>
 </body>
 </html>
